# SLAM-Scan-Matching

./: .gitignore  LICENSE  README.md  SLAM.m  SLAMbootstrap.m  mattest.m  mattest.sh  set-up.m  setup.m
GICP/: gicp.m
GradDecent/: findFourNearest.m  gradDecentMatcher.m  graddecent_strap.m
ICP/icp1/: icp1.m
ICP/libicp/: CMakeLists.txt  README.TXT
ICP/libicp/matlab/: demo_2d.m  demo_3d.m  icpMex.cpp  make.m  sparsifyMex.cpp
ICP/libicp/src/: demo.cpp  icpPointToPlane.cpp  icpPointToPlane.h  icpPointToPoint.cpp
Olson/: GetLidarXY.m  betterLookupTable.m  betterOlson.m  betterPtToPx.m  fillLidarData.m  genLookupTable.m  getLidarXY.m  lookupTable.m  olson.m  ptToPx.m  testBetterLookupTable.m  testBetterOlson.m  testBetterOlsonRealData.m  testLookupTable.m  testOlson.m  testOlsonRealData.m
PSM/: orientationSearch.m  plotSegments.m  preProcess.m  projectScan.m  psm.m  psmCostFnc.m  segmentScan.m  translationEstimation.m
chamfer/: chamferMatch.m
hill/: hcm.m  ogrid_gradient.m  ogrid_subpixel.m  plotItteration.m
testData/: testWorldPSM.mat  testworld.mat
util/: PlotRawLidar.m  PlotRawVectorNav.m  PlotTraj3D.m  ReadHokuyoLog.m  ReadHokuyoLog_1.m  ReadHokuyoLog_2.m  ReadLogfiles.m  ReadVectorNavLog.m  ReadVectorNavLog_1.m  ReadVectorNavLog_2.m  Simulate2D.m  change_current_figure.m  clearallplots.m  getLidarPolar.m  getLidarXY.m  oGrid.m  ptToPx.m
